# jusic

01_processes/: aba.cpp  meson.build
01_processes/aba/: aba.cpp  meson.build
01_processes/charout/: charout.cpp  meson.build
01_processes/src/: aba.cpp  charout.cpp
02_threads/: contest.cpp  meson.build
03_sync1/: meson.build
03_sync1/include/: account.h
03_sync1/src/: account.cpp  main.cpp
04_sync2/: meson.build
04_sync2/include/: work_packet.h
04_sync2/src/: main.cpp  work_packet.cpp  work_queue.cpp
05_sync3/: meson.build
05_sync3/include/: philosopher.h
05_sync3/src/: main.cpp  philosopher.cpp
06_future/: meson.build
06_future/src/: factoring.cpp
07_berkeley/: meson.build
07_berkeley/include/: clock.h  pipe.h
07_berkeley/src/: berkeley.cpp  clock.cpp
08_daytime/: meson.build  meson_options.txt
08_daytime/include/: timeutils.h
08_daytime/include/CLI/: -home-adi-Desktop-NVS-5CHIF-jusic-08_daytime-include-.txt
08_daytime/src/daytime_client/: main.cpp
08_daytime/src/daytime_server/: main.cpp
Lab1/hello2/src/: hello.cpp
Lab1/hello3/: meson.build
Lab1/hello3/src/: .hello.cpp.swp  hello.cpp  main.cpp
Lab1/hello4/: meson.build
Lab1/hello4/src/: hello.cpp  main.cpp
